[gd_scene load_steps=10 format=3 uid="uid://main_menu_scene"]

[ext_resource type="Script" path="res://Scripts/UI/MainMenu.gd" id="1"]
[ext_resource type="Texture2D" path="res://assets/backgrounds/menus/intro.jpg" id="2"]
[ext_resource type="Texture2D" path="res://assets/backgrounds/menus/main_menu.jpg" id="3"]
[ext_resource type="AudioStream" path="res://assets/music/level1_theme.ogg" id="4"]
[ext_resource type="AudioStream" path="res://assets/sfx/button_click.mp3" id="5"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1"]
bg_color = Color(0.2, 0.6, 0.8, 0.8)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(1, 0.5, 0, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_2"]
bg_color = Color(0.2, 0.6, 0.8, 0.6)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(1, 0.5, 0, 0.8)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3")
expand_mode = 1
stretch_mode = 6

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(1, 1)

[node name="IntroContainer" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="IntroTexture" type="TextureRect" parent="IntroContainer"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2")
expand_mode = 1
stretch_mode = 6

[node name="MainContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -400.0
offset_top = -300.0
offset_right = 400.0
offset_bottom = 300.0
grow_horizontal = 2
grow_vertical = 2

[node name="LogoLabel" type="Label" parent="MainContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.2, 0.8, 1, 1)
theme_override_colors/font_outline_color = Color(1, 0.5, 0, 1)
theme_override_constants/outline_size = 8
theme_override_font_sizes/font_size = 72
text = "CITY OF ASHES"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ButtonsContainer" type="VBoxContainer" parent="MainContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="StartButton" type="Button" parent="MainContainer/ButtonsContainer"]
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_1")
theme_override_styles/hover = SubResource("StyleBoxFlat_2")
theme_override_styles/pressed = SubResource("StyleBoxFlat_2")
theme_override_font_sizes/font_size = 32
text = "Start Game"
flat = false

[node name="SettingsButton" type="Button" parent="MainContainer/ButtonsContainer"]
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_1")
theme_override_styles/hover = SubResource("StyleBoxFlat_2")
theme_override_styles/pressed = SubResource("StyleBoxFlat_2")
theme_override_font_sizes/font_size = 32
text = "Settings"
flat = false

[node name="ExitButton" type="Button" parent="MainContainer/ButtonsContainer"]
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_1")
theme_override_styles/hover = SubResource("StyleBoxFlat_2")
theme_override_styles/pressed = SubResource("StyleBoxFlat_2")
theme_override_font_sizes/font_size = 32
text = "Exit"
flat = false

[node name="MusicPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4")
volume_db = -5.0
autoplay = false

[node name="HoverSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5")
volume_db = -8.0

[node name="ClickSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5")
volume_db = -5.0

